fix scrollbar being covered by nav bar

--- a/nautobot/project-static/css/base.css
+++ b/nautobot/project-static/css/base.css
@@ -7,7 +7,6 @@ html {
 }
 html, body {
     height: 100%;
-    overflow: auto;
 }
 body {
     padding-top: 70px;
@@ -25,8 +24,10 @@ body {
     height: 48px; /* .push must be the same height as .footer */
 }
 .footer {
-    background-color: #f5f5f5;
     border-top: 1px solid #d0d0d0;
+}
+.footer .row {
+    background-color: #f5f5f5;
 }
 footer p {
     margin: 12px 0;
